--- a/css/root.css
+++ b/css/root.css
@@ -274,7 +274,7 @@ body {
     line-height: 2.6rem;
 
     margin: 10px auto;
-    max-width: 1150px;
+    max-width: 1050px;
 
     background-color: #ffffff;
 }
@@ -321,7 +321,7 @@ p {
         padding: 0;
     }
 
-    .top-container {
+    .body-container {
         flex-flow: row nowrap;
         align-items: flex-end;
         margin: 0 10px 0 0;
