--- a/css/themes/dark.css
+++ b/css/themes/dark.css
@@ -1,20 +1,21 @@
 :root {
-    --back-color: #1F1F1F;
-    --header-color: white;
-    --text-color: #b3b3b3;
-    --link-color: #7aa6da;
-    --link-hover-color: #FFB224;
-    --github-icon: url(/media/icons/GitHub-Mark-32px-white.png);
-    --theme-switch-icon: url(/media/icons/newmoon-Freepik.png);
+    --dark-back-color: #1F1F1F;
+    --dark-secondary-color: #FFB224;
+    --dark-header-color: white;
+    --dark-text-color: #b3b3b3;
+    --dark-link-color: #7aa6da;
+    --dark-link-hover-color: #FFB224;
+    --dark-github-icon: url(/media/icons/GitHub-Mark-32px-white.png);
+    --dark-theme-switch-icon: url(/media/icons/newmoon-Freepik.png);
 }
 
 body.dark-theme {
-    background-color: var(--back-color);
-    color: var(--text-color);
+    background-color: var(--dark-back-color);
+    color: var(--dark-text-color);
 }
 
 body.dark-theme .github-link {
-    background-image: var(--github-icon);
+    background-image: var(--dark-github-icon);
     background-repeat: no-repeat;
     background-position: left center;
 
@@ -23,7 +24,7 @@ body.dark-theme .github-link {
 }
 
 body.dark-theme .home-github-link {
-    background-image: var(--github-icon);
+    background-image: var(--dark-github-icon);
     background-repeat: no-repeat;
     background-position: left center;
     background-size: 27px 27px;
@@ -47,7 +48,14 @@ body.dark-theme .theme-switch::after {
     content: 'Light';
     font-family: 'Ubuntu', sans-serif;
     font-weight: bold;
-    color: var(--text-color);
+    color: var(--dark-text-color);
+}
+
+body.dark-theme .top-nav .active {
+    border-top: 0;
+    border-left: 0;
+    border-right: 0;
+    border-bottom: 2px solid var(--dark-link-hover-color);    
 }
 
 body.dark-theme #nav-toggle span,
@@ -57,7 +65,7 @@ body.dark-theme #nav-toggle span::after {
     height: 4px;
     float: left;
     display: block;
-    background: var(--text-color);
+    background: var(--dark-text-color);
     position: relative;
     text-indent: -9000px;
 }
@@ -111,24 +119,24 @@ body.dark-theme #nav-toggle.active span::after {
 }
 
 body.dark-theme a {
-    color: var(--link-color);
+    color: var(--dark-link-color);
 }
 
 body.dark-theme a:focus {
-    color: var(--link-hover-color);
-    border: 2px solid var(--link-hover-color);
+    color: var(--dark-link-hover-color);
+    border: 2px solid var(--dark-link-hover-color);
 }
 
 body.dark-theme a:hover {
-    color: var(--link-hover-color);
+    color: var(--dark-link-hover-color);
 }
 
 body.dark-theme footer {
-    color: var(--text-color);
+    color: var(--dark-text-color);
 }
 
 body.dark-theme h2 {
-    border: .01em solid var(--text-color);
+    border: .01em solid var(--dark-text-color);
     border-top: none;
     border-left: none;
     border-right: none;
@@ -139,5 +147,5 @@ body.dark-theme h2,
 body.dark-theme h3,
 body.dark-theme h4,
 body.dark-theme h5 {
-    color: var(--header-color);
+    color: var(--dark-header-color);
 }
