--- a/css/root.css
+++ b/css/root.css
@@ -1,5 +1,5 @@
 :root {
-    --fonts: 'Open Sans','Helvetica Neue','Helvetica','Arial','sans-serif';
+    --fonts: 'Open Sans', 'Helvetica Neue', 'Helvetica', 'Arial', 'sans-serif';
     --background-color: #f5f5f5;
     --secondary-color: #1D4072;
     --link-hover-color: #724F1D;
@@ -199,9 +199,9 @@
 }
 
 .top-nav .active {
-    border-top: 0;
-    border-left: 0;
-    border-right: 0;
+    border-top: 2px transparent;
+    border-left: 2px transparent;
+    border-right: 2px transparent;
     border-bottom: 2px solid var(--link-hover-color);
 }
 
@@ -224,7 +224,7 @@
 
 .moon {
     display: none;
-    
+
     height: 40px;
     width: 40px;
     border-radius: 50px;
@@ -240,13 +240,12 @@ a {
     text-decoration: none;
     line-height: 1.3;
     font-weight: 400;
-    border: 2px solid transparent;
+    border: 2px transparent;
 }
 
 a:focus {
     color: var(--link-hover-color);
     text-decoration: none;
-    border: 2px solid var(--link-hover-color);
 }
 
 a:hover {
