--- a/css/themes/dark.css
+++ b/css/themes/dark.css
@@ -52,10 +52,10 @@ body.dark-theme .theme-switch::after {
 }
 
 body.dark-theme .top-nav .active {
-    border-top: 0;
-    border-left: 0;
-    border-right: 0;
-    border-bottom: 2px solid var(--dark-link-hover-color);    
+    border-top: 2px transparent;
+    border-left: 2px transparent;
+    border-right: 2px transparent;
+    border-bottom: 2px solid var(--dark-link-hover-color);
 }
 
 body.dark-theme #nav-toggle span,
@@ -124,7 +124,6 @@ body.dark-theme a {
 
 body.dark-theme a:focus {
     color: var(--dark-link-hover-color);
-    border: 2px solid var(--dark-link-hover-color);
 }
 
 body.dark-theme a:hover {
