--- a/css/root.css
+++ b/css/root.css
@@ -3,6 +3,7 @@
     --background-color: #f5f5f5;
     --secondary-color: #1D4072;
     --link-hover-color: #724F1D;
+    --secondary-background-color: #dddddd;
     --text-color: #575757;
     --header-color: black;
 }
@@ -18,26 +19,9 @@
     display: block;
 }
 
-#nav-panel {
-    display: none;
-    overflow: hidden;
-    background: var(--background-color);
-    width: 50%;
-    top: 0;
-    position: absolute;
-    right: 0;
-    height: 100vh !important;
-    -webkit-transition: all 100ms ease-in-out;
-    -moz-transition: all 100ms ease-in-out;
-    -ms-transition: all 100ms ease-in-out;
-    -o-transition: all 100ms ease-in-out;
-    transition: all 100ms ease-in-out;
-    z-index: 1000;
-    max-width: 1600px;
-}
-
 #nav-toggle {
     display: none;
+    z-index: 1000;
 }
 
 #nav-toggle span, #nav-toggle span::before,
@@ -224,6 +208,18 @@
 
 .mobile-nav-bar {
     display: none;
+    position: absolute;
+    right: 0;
+    top: 0;
+
+    height: 100vh;
+    width: 35vw;
+    min-width: 200px;
+    background-color: var(--secondary-background-color);
+    opacity: 0.9;
+    backdrop-filter: blur(8px);
+
+    z-index: 500;
 }
 
 .mobile-nav-controls {
@@ -309,18 +305,22 @@ p {
 }
 
 @media screen and (max-width: 647px) {
-    .main-logo {
-        align-self: center;
-    }
-
-    .theme-switch {
-        padding: 0;
-    }
-
     .body-container {
         flex-flow: row nowrap;
         align-items: flex-end;
         margin: 0 10px 0 0;
+    }
+
+    .main-logo {
+        align-self: center;
+    }
+
+    .mobile-nav-bar.active {
+        display: block;
+    }
+
+    .theme-switch {
+        padding: 0;
     }
 
     .top-controls {
