--- a/css/root.css
+++ b/css/root.css
@@ -1,10 +1,10 @@
 :root {
     --fonts: 'Open Sans', 'Helvetica Neue', 'Helvetica', 'Arial', 'sans-serif';
     --background-color: #f5f5f5;
+    --secondary-background-color: #dddddd;
     --secondary-color: #1D4072;
     --link-hover-color: #724F1D;
-    --secondary-background-color: #dddddd;
-    --text-color: #575757;
+    --text-color: #272727;
     --header-color: black;
 }
 
@@ -134,11 +134,6 @@
     width: 40px;
 }
 
-.text {
-    position: relative;
-    top: 50%;
-}
-
 .theme-switch {
     border-radius: 50px;
     border: 2px solid transparent;
@@ -189,16 +184,6 @@
     border-bottom: 2px solid var(--link-hover-color);
 }
 
-.main-menu {
-    list-style-type: none;
-    font-size: 30px;
-    padding: 150px 35px;
-
-    display: flex;
-    flex-flow: column nowrap;
-    align-items: center;
-}
-
 .main-logo {
     height: 100px;
     width: auto;
@@ -212,7 +197,7 @@
     right: 0;
     top: 0;
 
-    height: 100vh;
+    height: 100%;
     width: 35vw;
     min-width: 200px;
     background-color: var(--secondary-background-color);
