--- a/css/root.css
+++ b/css/root.css
@@ -1,361 +1,5 @@
-:root {
-    --fonts: 'Open Sans', 'Helvetica Neue', 'Helvetica', 'Arial', 'sans-serif';
-    --background-color: #f5f5f5;
-    --secondary-background-color: #dddddd;
-    --secondary-color: #1D4072;
-    --link-hover-color: #724F1D;
-    --text-color: #272727;
-    --header-color: black;
-}
-
-#interests {
-    margin: 90px 0 0 0;
-}
-
-#money_saver, #pushups_gif {
-    min-width: 490px;
-    height: 100%;
-    width: 100%;
-    display: block;
-}
-
-#nav-toggle {
-    display: none;
-    z-index: 1000;
-}
-
-#nav-toggle span, #nav-toggle span::before,
-#nav-toggle span::after {
-    width: 28px;
-    height: 4px;
-    float: left;
-    display: block;
-    background: #000;
-    position: relative;
-    text-indent: -9000px;
-}
-
-#nav-toggle span {
-    margin: 8px 0;
-}
-
-#nav-toggle span::before,
-#nav-toggle span::after {
-    content: '';
-    position: absolute;
-}
-
-#nav-toggle span::before {
-    top: -8px;
-}
-
-#nav-toggle span::after {
-    bottom: -8px;
-}
-
-#nav-toggle span,
-#nav-toggle span:before,
-#nav-toggle span:after {
-    -webkit-transition: all 100ms ease-in-out;
-    -moz-transition: all 100ms ease-in-out;
-    -ms-transition: all 100ms ease-in-out;
-    -o-transition: all 100ms ease-in-out;
-    transition: all 100ms ease-in-out;
-}
-
-#nav-toggle.active span {
-    background-color: transparent;
-}
-
-#nav-toggle.active span::before,
-#nav-toggle.active span::after {
-    top: 0;
-}
-
-#nav-toggle.active span:before {
-    transform: rotate(45deg);
-    -webkit-transform: rotate(45deg);
-}
-
-#nav-toggle.active span::after {
-    transform: translateY(-10px) rotate(-45deg);
-    -webkit-transform: translateY(-10px) rotate(-45deg);
-    top: 10px;
-}
-
-#resume {
-    height: 1400px;
-    width: 100%;
-    margin: 25px auto 0 auto;
-    border: none;
-}
-
-.description {
-    max-width: 550px;
-}
-
-.github-link {
-    background-image: url(/media/icons/GitHub-Mark-32px-black.png);
-    background-repeat: no-repeat;
-    background-position: left center;
-
-    background-size: 20px 20px;
-    padding-left: 25px;
-}
-
-.interest {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-between;
-    gap: 10px;
-}
-
-.interest .description {
-    flex: 1 1 400px;
-}
-
-.interest img {
-    flex: 1 0 0;
-}
-
-.resume-link {
-    background-image: url(/media/icons/resume-icon.png);
-    background-repeat: no-repeat;
-    background-size: 20px 20px;
-    background-position: left center;
-
-    padding-left: 20px;
-}
-
-.sun {
-    display: block;
-
-    height: 40px;
-    width: 40px;
-}
-
-.theme-switch {
-    border-radius: 50px;
-    border: 2px solid transparent;
-    background-color: transparent;
-    padding: 10px 0 0 0;
-}
-
-.theme-switch::after {
-    content: 'Dark';
-    font-family: var(--fonts);
-    font-weight: bold;
-}
-
-.top-container {
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: space-between;
-    margin: 20px 0 50px 0;
-}
-
-.top-controls {
-    display: flex;
-    flex-flow: row nowrap;
-    align-items: center;
-    gap: 35px;
-}
-
-.top-nav {
-    display: flex;
-    flex-flow: row nowrap;
-    font-size: 20px;
-    font-family: var(--fonts);
-    font-weight: bold;
-
-    gap: 35px;
-
-    list-style: none;
-}
-
-.top-nav li {
-    flex: 1 0 1;
-}
-
-.top-nav .active {
-    border-top: 2px transparent;
-    border-left: 2px transparent;
-    border-right: 2px transparent;
-    border-bottom: 2px solid var(--link-hover-color);
-}
-
-.main-logo {
-    height: 100px;
-    width: auto;
-    display: block;
-    border: 1px solid transparent;
-}
-
-.mobile-nav-bar {
-    display: none;
-    position: absolute;
-    right: 0;
-    top: 0;
-
-    height: 100%;
-    width: 35vw;
-    min-width: 200px;
-    background-color: var(--secondary-background-color);
-    opacity: 0.9;
-    backdrop-filter: blur(8px);
-
-    z-index: 500;
-}
-
-.mobile-nav-controls {
-    list-style: none;
-}
-
-.moon {
-    display: none;
-
-    height: 40px;
-    width: 40px;
-    border-radius: 50px;
-}
-
-.nav-controls {
-    display: flex;
-    flex-flow: row nowrap;
-}
-
-a {
-    color: var(--secondary-color);
-    text-decoration: none;
-    line-height: 1.3;
-    font-weight: 400;
-    border: 2px transparent;
-}
-
-a:focus {
-    color: var(--link-hover-color);
-    text-decoration: none;
-}
-
-a:hover {
-    color: var(--link-hover-color);
-    text-decoration: none;
-}
-
-body {
-    color: var(--text-color);
-    font-weight: 400;
-    font-family: var(--fonts);
-    font-size: 1.3rem;
-    line-height: 2.6rem;
-
-    margin: 10px auto;
-    max-width: 1050px;
-
-    background-color: var(--background-color);
-}
-
-footer {
-    color: var(--text-color);
-    font-size: 10px;
-    line-height: 1rem;
-
-    text-align: center;
-
-    margin: 350px auto 40px auto;
-}
-
-footer a {
-    font-size: 10px;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5 {
-    color: var(--header-color);
-    font-weight: 300;
-}
-
-h2 {
-    border: .01em solid #252525;
-    border-top: none;
-    border-left: none;
-    border-right: none;
-}
-
-p {
-    font-size: 1.125rem;
-}
-
-@media screen and (max-width: 647px) {
-    .body-container {
-        flex-flow: row nowrap;
-        align-items: flex-end;
-        margin: 0 10px 0 0;
-    }
-
-    .main-logo {
-        align-self: center;
-    }
-
-    .mobile-nav-bar.active {
-        display: block;
-    }
-
-    .theme-switch {
-        padding: 0;
-    }
-
-    .top-controls {
-        flex-flow: column nowrap;
-        gap: 0px;
-    }
-
-    .top-nav {
-        display: none;
-        flex-flow: column nowrap;
-    }
-
-    #money_saver, #pushups_gif {
-        max-width: 490px;
-        min-width: 270px;
-        height: 100%;
-        width: 100%;
-        display: block;
-    }
-
-    #nav-toggle {
-        display: block;
-        float: right;
-        padding: 10px 0;
-        cursor: pointer;
-    }
-
-    body {
-        margin: 10px 15px;
-    }
-}
-
-@media screen and (min-width: 648px) and (max-width: 1049px) {
-    .top-container {
-        display: flex;
-        flex-flow: column nowrap;
-        align-items: center;
-    }
-
-    #money_saver, #pushups_gif {
-        max-width: 490px;
-        min-width: 490px;
-        height: 100%;
-        width: 100%;
-        display: block;
-    }
-}
-
-@media screen and (max-width: 1190px) {
-    body {
-        margin: 10px 20px;
-    }
-}
+:root{--fonts:'Open Sans','Helvetica Neue','Helvetica','Arial','sans-serif';--background-color:#f5f5f5;--secondary-background-color:#ddd;--secondary-color:#1d4072;--link-hover-color:#724f1d;--text-color:#272727;--header-color:#000}#interests{margin:90px 0 0}#money_saver,#pushups_gif{min-width:490px;height:100%;width:100%;display:block}#nav-toggle{display:none;z-index:1000}#nav-toggle span,#nav-toggle span:before,#nav-toggle span:after{width:28px;height:4px;float:left;display:block;background:#000;position:relative;text-indent:-9000px}#nav-toggle span{margin:8px 0}#nav-toggle span:before,#nav-toggle span:after{content:'';position:absolute}#nav-toggle span:before{top:-8px}#nav-toggle span:after{bottom:-8px}#nav-toggle span,#nav-toggle span:before,#nav-toggle span:after{-webkit-transition:all .1s ease-in-out;-moz-transition:all .1s ease-in-out;-ms-transition:all .1s ease-in-out;-o-transition:all .1s ease-in-out;transition:all .1s ease-in-out}#nav-toggle.active span{background-color:transparent}
+#nav-toggle.active span:before,#nav-toggle.active span:after{top:0}#nav-toggle.active span:before{transform:rotate(45deg);-webkit-transform:rotate(45deg)}#nav-toggle.active span:after{transform:translateY(-10px) rotate(-45deg);-webkit-transform:translateY(-10px) rotate(-45deg);top:10px}#resume{height:1400px;width:100%;margin:25px auto 0 auto;border:none}.description{max-width:550px}.github-link{background-image:url(/media/icons/GitHub-Mark-32px-black.png);background-repeat:no-repeat;background-position:left center;background-size:20px 20px;padding-left:25px}.interest{display:flex;flex-flow:row wrap;justify-content:space-between;gap:10px}.interest .description{flex:1 1 400px}.interest img{flex:1 0 0}.resume-link{background-image:url(/media/icons/resume-icon.png);background-repeat:no-repeat;background-size:20px 20px;background-position:left center;padding-left:20px}.sun{display:block;height:40px;width:40px}.theme-switch{border-radius:50px;border:2px solid transparent;background-color:transparent;padding:10px 0 0}
+.theme-switch:after{content:'Dark';font-family:var(--fonts);font-weight:700}.top-container{display:flex;flex-flow:row nowrap;justify-content:space-between;margin:20px 0 50px}.top-controls{display:flex;flex-flow:row nowrap;align-items:center;gap:35px}.top-nav{display:flex;flex-flow:row nowrap;font-size:20px;font-family:var(--fonts);font-weight:700;gap:35px;list-style:none}.top-nav li{flex:1 0 1}.top-nav .active{border-top:2px transparent;border-left:2px transparent;border-right:2px transparent;border-bottom:2px solid var(--link-hover-color)}.main-logo{height:100px;width:auto;display:block;border:1px solid transparent}.mobile-nav-bar{display:none;position:absolute;right:0;top:0;height:100%;width:35vw;min-width:200px;background-color:var(--secondary-background-color);opacity:.9;backdrop-filter:blur(8px);z-index:500}.mobile-nav-controls{list-style:none}.moon{display:none;height:40px;width:40px;border-radius:50px}.nav-controls{display:flex;flex-flow:row nowrap}a{color:var(--secondary-color);text-decoration:none;line-height:1.3;font-weight:400;border:2px transparent}
+a:focus{color:var(--link-hover-color);text-decoration:none}a:hover{color:var(--link-hover-color);text-decoration:none}body{color:var(--text-color);font-weight:400;font-family:var(--fonts);font-size:1.3rem;line-height:2.6rem;margin:10px auto;max-width:1050px;background-color:var(--background-color)}footer{color:var(--text-color);font-size:10px;line-height:1rem;text-align:center;margin:350px auto 40px auto}footer a{font-size:10px}h1,h2,h3,h4,h5{color:var(--header-color);font-weight:300}h2{border:.01em solid #252525;border-top:none;border-left:none;border-right:none}p{font-size:1.125rem}@media screen and (max-width:647px){.body-container{flex-flow:row nowrap;align-items:flex-end;margin:0 10px 0 0}.main-logo{align-self:center}.mobile-nav-bar.active{display:block}.theme-switch{padding:0}.top-controls{flex-flow:column nowrap;gap:0px}.top-nav{display:none;flex-flow:column nowrap}#money_saver,#pushups_gif{max-width:490px;min-width:270px;height:100%;width:100%;display:block}#nav-toggle{display:block;float:right;padding:10px 0;cursor:pointer}
+body{margin:10px 15px}}@media screen and (min-width:648px) and (max-width:1049px){.top-container{display:flex;flex-flow:column nowrap;align-items:center}#money_saver,#pushups_gif{max-width:490px;min-width:490px;height:100%;width:100%;display:block}}@media screen and (max-width:1190px){body{margin:10px 20px}}
