--- a/css/root.css
+++ b/css/root.css
@@ -9,7 +9,7 @@
 }
 
 #interests {
-    margin: 90px 0 0;
+    margin: 50px 0 0;
 }
 
 #money_saver,
@@ -174,7 +174,8 @@
     flex: 1 0 1;
 }
 
-.top-nav .active {
+.top-nav .active,
+.mobile-nav-controls .active {
     border-top: 2px transparent;
     border-left: 2px transparent;
     border-right: 2px transparent;
@@ -218,6 +219,26 @@
     flex-flow: row nowrap;
 }
 
+.projects {
+    display: flex;
+    flex-flow: row wrap;
+    gap: 34px;
+}
+
+.project {
+    height: 325px;
+    width: 325px;
+    border: 1px solid black;
+    border-radius: 15px;
+}
+
+.project.rps {
+    background-image: url(/media/icons/rock-paper-scissors.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 325px 325px;
+}
+
 a {
     color: var(--secondary-color);
     text-decoration: none;
@@ -226,7 +247,7 @@ a {
     border: 2px transparent;
 }
 
-a:focus {
+a:focus-visible {
     color: var(--link-hover-color);
     text-decoration: none;
 }
