--- a/css/root.css
+++ b/css/root.css
@@ -219,24 +219,44 @@
     flex-flow: row nowrap;
 }
 
+.project, .projects .title {
+    height: 250px;
+    width: 250px;
+    background-color: var(--secondary-background-color);
+    border-radius: 15px;
+}
+
+.project.eas {
+    background-image: url(/media/icons/rock-paper-scissors.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 200px;
+}
+
+.project.rps {
+    background-image: url(/media/icons/sketchbook.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 200px;
+}
+
 .projects {
     display: flex;
     flex-flow: row wrap;
     gap: 34px;
 }
 
-.project {
-    height: 325px;
-    width: 325px;
-    border: 1px solid black;
-    border-radius: 15px;
+.projects .title {
+    display: flex;
+    position: absolute;
+    justify-content: center;
+    align-items: center;
+    z-index: 5;
+    transition: opacity .2s;
 }
 
-.project.rps {
-    background-image: url(/media/icons/rock-paper-scissors.png);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 325px 325px;
+.projects .title:hover {
+    opacity: 0;
 }
 
 a {
@@ -266,6 +286,7 @@ body {
     margin: 10px auto;
     max-width: 1050px;
     background-color: var(--background-color);
+    padding-left: calc(100vw - 100%);
 }
 
 footer {
@@ -300,7 +321,7 @@ p {
     font-size: 1.125rem;
 }
 
-@media screen and (max-width: 647px) {
+@media screen and (max-width: 691px) {
     .body-container {
         flex-flow: row nowrap;
         align-items: flex-end;
@@ -350,7 +371,7 @@ p {
     }
 }
 
-@media screen and (min-width: 648px) and (max-width: 1049px) {
+@media screen and (min-width: 692px) and (max-width: 1049px) {
     .top-container {
         display: flex;
         flex-flow: column nowrap;
