--- a/css/themes/dark.css
+++ b/css/themes/dark.css
@@ -1,6 +1,6 @@
 :root {
-    --dark-back-color: #181818;
-    --dark-secondary-back-color: #202020;
+    --dark-back-color: #121212;
+    --dark-secondary-back-color: #1a1a1a;
     --fonts: "Open Sans", "Helvetica Neue", "Helvetica", "Arial", "sans-serif";
     --dark-secondary-color: #ffb224;
     --dark-header-color: #fff;
