--- a/css/themes/dark.css
+++ b/css/themes/dark.css
@@ -151,17 +151,16 @@ body.dark-theme footer {
     color: var(--dark-text-color);
 }
 
-body.dark-theme h2 {
-    border: 0.01em solid var(--dark-text-color);
-    border-top: none;
-    border-left: none;
-    border-right: none;
-}
-
 body.dark-theme h1,
 body.dark-theme h2,
 body.dark-theme h3,
 body.dark-theme h4,
 body.dark-theme h5 {
     color: var(--dark-header-color);
+}
+
+body.dark-theme p {
+    background-color: var(--dark-secondary-back-color);
+    border-radius: 10px;
+    padding: 1.5em;
 }
