--- a/projects/rps/style.css
+++ b/projects/rps/style.css
@@ -15,15 +15,37 @@ button {
     font-weight: 700;
 }
 
-#backToProjects {
-    margin-right: 20;
+#backToProjects button {
+    display: block;
+    margin: 0 auto;
+    padding: 9px 15px;
+    width: 180px;
+    font-size: 14px;
+    font-weight: 700;
+    color: black;
+    background-color: white;
+    border: 1px solid black;
+    border-radius: 2px;
+    cursor: pointer;
 }
+
+#backToProjects button:hover {
+    color: white;
+    background-color: black;
+}
+
 
 .paper {
     background-image: url(/projects/rps/media/paper.png);
     background-size: 100%;
     height: 100px;
     width: 100px;
+}
+
+.return {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: flex-end;
 }
 
 .rock {
