--- a/projects/etch-a-sketch/style.css
+++ b/projects/etch-a-sketch/style.css
@@ -200,6 +200,7 @@ button.clear {
     display: flex;
     flex-flow: row nowrap;
     justify-content: flex-end;
+    margin: 20px 0 0 0;
 }
 
 #backToProjects {
